fix errol z-index

--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -145,6 +145,7 @@ background-color: #c3c3c3;
     display: flex;
     align-items: center;
     justify-content: space-between;
+    z-index: 1;
 
 }
 
